Replaced code dependent on deprecated media API unavailable on Safari (issue #88). Added check for existence of MediaRecorder (issue #95).

--- a/client/src/widgets/device-placeholder.scss
+++ b/client/src/widgets/device-placeholder.scss
@@ -2,10 +2,7 @@
     font-size: 8em;
     padding-left: 0.5em;
     padding-right: 0.5em;
-
-    .fa-camera {
-        color: #111111;
-    }
+    color: #111111;
 
     .fa-ban {
         color: #ee3333;
